# ea-framework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  problems.md
scripts/: batch_start_assignment.py  compress_run_folder.sh  compress_run_results.py  fsoc-simple.sh  fsoc.sh  instant-plot.py
scripts/helpers/: batch-avg-generations.sh  batch-avg.sh  batch-clean.sh  clean_summary.py  make_all.sh  make_all_generations.sh  quick_plot_generations.sh  quick_rank_generations.sh
scripts/result_processing/: avg_fitness.py  avg_generations.py  check_integrity.py  plot_avg_fitness.py  plot_avg_generations.py  rank_avg_fitness.py  rank_avg_generations.py  summary.py
src/: CMakeLists.txt  EA.cpp  EA.hpp  Experiment.cpp  Experiment.hpp  Graph.cpp  Graph.hpp  Individual.cpp  Individual.hpp  InformationCollector.cpp  InformationCollector.hpp  Instance.cpp  Instance.hpp  MutationOperator.hpp  MutationOperatorFactory.cpp  MutationOperatorFactory.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  ObjectiveFunctionFactory.hpp  Runner.cpp  Runner.hpp  main.cpp  typedefs.hpp
src/app/: CMakeLists.txt  eaframework.cpp  graph_metadata.cpp  main.cpp  start_assignment.cpp
src/lib/: CMakeLists.txt  EA.cpp  EA.hpp  Experiment.cpp  Experiment.hpp  Graph.cpp  Graph.hpp  Individual.cpp  Individual.hpp  InformationCollector.cpp  InformationCollector.hpp  Instance.cpp  Instance.hpp  MutationOperator.cpp  MutationOperator.hpp  MutationOperatorFactory.cpp  MutationOperatorFactory.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  Runner.cpp  Runner.hpp  activity_helpers.cpp  activity_helpers.hpp  helpers.hpp
test/: ActivityHelperTest.cpp  CMakeLists.txt  EATest.cpp  ExperimentTest.cpp  GraphTest.cpp  InformationCollectorTest.cpp  InstanceTest.cpp  MutationOperatorTest.cpp  ObjectiveFunctionTest.cpp  main.cpp
test/data/: config.json  test-general.mtx  test-symmetric.mtx  test.mtx  test.txt
test/data/MutationOperatorTest/: test.txt
